Problema do avatar resolvido, adicionado app.use() app.js e modificado o ejs headerLogin

--- a/SOF/views/partials/headerlogin.ejs
+++ b/SOF/views/partials/headerlogin.ejs
@@ -36,7 +36,7 @@
                 <div class="profileMenu">
                     <div id="profileMenuPic">
                         <a href="/profileview">
-                            <img src='../../<%= user.avatar.path %>' alt="profile picture on dropdown menu"></a>
+                            <img src='<%= user.avatar.filename%>' alt="profile picture on dropdown menu"></a>
                         <a href="#"><i class="fas fa-sort-down"></i></a>
                     </div>
                     <div class="dropdownLogged">
