--- a/SOF/views/accountmgmt.ejs
+++ b/SOF/views/accountmgmt.ejs
@@ -66,7 +66,7 @@
                 <div class="editBox">
                     <h2>Editar Meu Perfil</h2>
                     <div class="uploadProfilePictureBox">
-                        <img src='/<%=user.avatar.path%>' alt="avatar">
+                        <img src='<%=user.avatar.filename%>' alt="avatar">
                     </div>
                     <form action="">
                         <label for="user">Nome Completo</label>
