--- a/SOF/public/stylesheets/style.css
+++ b/SOF/public/stylesheets/style.css
@@ -2357,6 +2357,12 @@ select:hover{
   border-radius: 50%;
 }
 
+.containerAccMgmt .uploadProfilePictureBox img{
+width: 100%;
+height: 100%;
+border-radius: 50%;
+}
+
 .containerAccMgmt .settingsUpdate{
   font-size: 10px;
   width: 70%;
