Alterações feitas na pagina de login (estava logando sem senha), e ajuste no redirecionamento das rotas

--- a/SOF/views/signUp.ejs
+++ b/SOF/views/signUp.ejs
@@ -18,7 +18,7 @@
                         </div>
                         <% } %>
                             <label for="fullName">Nome Completo</label>
-                            <input name="fullName" type="text" placeholder="digite seu nome">
+                            <input name="fullName" type="text" placeholder="digite seu nome" value=<=% fields.name %>>
                             <br>
                             <label for=" username">Usuário</label>
                             <input name="username" type="text" placeholder="@usuário">
