--- a/SOF/views/accountmgmt.ejs
+++ b/SOF/views/accountmgmt.ejs
@@ -8,6 +8,9 @@
             <div class="editDashboard">
                 <div class="editBox">
                     <h2>Meus Dados</h2>
+                    <div class="uploadProfilePictureBox">
+                        <img src='<%=user.avatar.filename%>' alt="avatar">
+                    </div>
                     <h4>nome completo</h4>
                     <p>
                         <%= user.name %>
@@ -29,57 +32,77 @@
                     </p>
                     <br>
                     <h4>Bio</h4>
-                    <textarea name="bio" id="bio" cols="30" rows="10" disabled
+                    <textarea name="bio" id="bio" cols="30" rows="5" disabled
                         placeholder=" <%= user.bioUpdate %>"></textarea>
                 </div>
                 <div class="editBox">
                     <h2>Editar Minha Conta</h2>
-                    <form action="/accountmgmt" method="post">
-                        <label for="username">usuário</label>
-                        <input type="text" name="username" placeholder="@usuário">
-                        <button type="submit">Atualizar</button>
-                    </form>
-                    <br>
-                    <form action="/accountmgmt" method="post">
-                        <label for="email">email</label>
-                        <input type="email" name="email" placeholder="email@email.com">
-                        <label for="emailConfirmation">confirmar email</label>
-                        <input type="email" name="emailConfirmation" placeholder="email@email.com">
-                        <button type="submit">Atualizar</button>
-                    </form>
-                    <br>
-                    <form action="/accountmgmt" method="post">
-                        <label for="phone">celular</label>
-                        <input type="text" name="phone" placeholder="(XX) XXXXX-XXXX">
-                        <button type="submit">Atualizar</button>
-                    </form>
-                    <br>
-                    <form action="/accountmgmt" method="post">
-                        <label for="password">senha</label>
-                        <input type="password" name="password" placeholder="email@email.com">
-                        <label for="passwordConfirmation">confirmar senha</label>
-                        <input type="password" name="passwordConfirmation" placeholder="email@email.com">
-                        <button type="submit">Atualizar</button>
-                        <br>
-                    </form>
+                    <% if(typeof(errors) !="undefined" ) { %>
+                        <div class="error">
+                            <ul>
+                                <% console.log('here', errors); errors.errors.forEach((error)=>{ %>
+                                    <li>
+                                        <%= error.msg %>
+                                    </li>
+                                    <% }) %>
+                            </ul>
+                        </div>
+                        <% } %>
+                            <form action="/updateusername" method="post">
+                                <label for="username">usuário</label>
+                                <input type="text" name="username" placeholder="@usuário">
+                                <button type="submit">Atualizar</button>
+                            </form>
+                            <br>
+                            <form action="/updateemail" method="post">
+                                <label for="email">email</label>
+                                <input type="email" name="email" placeholder="email@email.com">
+                                <label for="emailConfirmation">confirmar email</label>
+                                <input type="email" name="emailConfirmation" placeholder="email@email.com">
+                                <button type="submit">Atualizar</button>
+                            </form>
+                            <br>
+                            <form action="/updatephone" method="post">
+                                <label for="phone">celular</label>
+                                <input type="text" name="phone" placeholder="(XX) XXXXX-XXXX">
+                                <button type="submit">Atualizar</button>
+                            </form>
+                            <br>
+                            <form action="/updatepassword" method="post">
+                                <label for="password">senha</label>
+                                <input type="password" name="password" placeholder="Digite sua senha">
+                                <label for="passwordConfirmation">confirmar senha</label>
+                                <input type="password" name="passwordConfirmation" placeholder="Digite sua senha">
+                                <button type="submit">Atualizar</button>
+                                <br>
+                            </form>
                 </div>
                 <div class="editBox">
                     <h2>Editar Meu Perfil</h2>
-                    <div class="uploadProfilePictureBox">
-                        <img src='<%=user.avatar.filename%>' alt="avatar">
-                    </div>
-                    <form action="">
-                        <label for="user">Nome Completo</label>
-                        <input type="text" placeholder="digite seu nome">
-                        <label for="user">Bio</label>
-                        <textarea class="bioUpdate" name="bioUpdate" id="bioUpdate" cols="30" rows="10"></textarea>
+
+                    <form action="/updateavatar" method="post" enctype="multipart/form-data">
+                        <label for="user">Mude seu avatar</label>
+                        <label for="avatar">Avatar</label>
+                        <input type="file" name="avatar" accept="image/*">
+                        <button type="submit">Atualizar</button>
                         <br>
-                        <button class="settingsUpdate">Definir Background</button>
+                    </form>
+                    <form action="/updatename" method="post">
+                        <label for="name">Nome Completo</label>
+                        <input type="text" name="name" placeholder="digite seu nome">
+                        <button type="submit">Atualizar</button>
+                    </form>
+                    <form action="/updatebio" method="post">
+                        <label for="bioUpdate">Bio</label>
+                        <textarea class="bioUpdate" name="bioUpdate" id="bioUpdate" cols="30" rows="10"></textarea>
+                        <button type="submit">Atualizar</button>
+                        <br>
+                    </form>
+                    <!-- <button class="settingsUpdate">Definir Background</button>
                         <button class="settingsUpdate">Vincular Redes Sociais</button>
                         <br>
                         <br>
-                        <button>Atualizar</button>
-                    </form>
+                        <button>Atualizar</button> -->
                 </div>
             </div>
         </div>
