adjustment to keep logged header throughout all pages with session

--- a/SOF/views/about.ejs
+++ b/SOF/views/about.ejs
@@ -1,78 +1,94 @@
-<%- include('./partials/header') %>
+<% if (user !=undefined) { %>
+    <%- include('./partials/headerlogin') %>
 
-    <div class="containerAbout">
-        <div class="pageTitle"><%= title %></div>
-        <div class="aboutUsGrid">
-            <div class="aboutUsCard">
-                <div class="aboutUsPic">
-                    <img src="/images/defaultprofile.png" alt="profie image about us page">
-                </div>
-                <div class="aboutUsInfo">
-                    <h4>Full Name</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis sapiente
-                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus itaque alias
-                        cumque sed quas, possimus cum.
-                    </p>
-                    <div class="aboutUsSocial">
-                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
-                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+
+        <%} else{ %>
+            <%- include('./partials/header') %>
+                <% } %>
+
+                    <div class="containerAbout">
+                        <div class="pageTitle">
+                            <%= title %>
+                        </div>
+                        <div class="aboutUsGrid">
+                            <div class="aboutUsCard">
+                                <div class="aboutUsPic">
+                                    <img src="/images/defaultprofile.png" alt="profie image about us page">
+                                </div>
+                                <div class="aboutUsInfo">
+                                    <h4>Full Name</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis
+                                        sapiente
+                                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus
+                                        itaque alias
+                                        cumque sed quas, possimus cum.
+                                    </p>
+                                    <div class="aboutUsSocial">
+                                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
+                                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="aboutUsCard">
+                                <div class="aboutUsPic">
+                                    <img src="/images/defaultprofile.png" alt="profie image about us page">
+                                </div>
+                                <div class="aboutUsInfo">
+                                    <h4>Full Name</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis
+                                        sapiente
+                                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus
+                                        itaque alias
+                                        cumque sed quas, possimus cum.
+                                    </p>
+                                    <div class="aboutUsSocial">
+                                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
+                                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="aboutUsCard">
+                                <div class="aboutUsPic">
+                                    <img src="/images/defaultprofile.png" alt="profie image about us page">
+                                </div>
+                                <div class="aboutUsInfo">
+                                    <h4>Full Name</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis
+                                        sapiente
+                                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus
+                                        itaque alias
+                                        cumque sed quas, possimus cum.
+                                    </p>
+                                    <div class="aboutUsSocial">
+                                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
+                                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="aboutUsCard">
+                                <div class="aboutUsPic">
+                                    <img src="/images/defaultprofile.png" alt="profie image about us page">
+                                </div>
+                                <div class="aboutUsInfo">
+                                    <h4>Full Name</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis
+                                        sapiente
+                                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus
+                                        itaque alias
+                                        cumque sed quas, possimus cum.
+                                    </p>
+                                    <div class="aboutUsSocial">
+                                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
+                                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
 
-                </div>
-            </div>
-            <div class="aboutUsCard">
-                <div class="aboutUsPic">
-                    <img src="/images/defaultprofile.png" alt="profie image about us page">
-                </div>
-                <div class="aboutUsInfo">
-                    <h4>Full Name</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis sapiente
-                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus itaque alias
-                        cumque sed quas, possimus cum.
-                    </p>
-                    <div class="aboutUsSocial">
-                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
-                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
-                    </div>
-
-                </div>
-            </div>
-            <div class="aboutUsCard">
-                <div class="aboutUsPic">
-                    <img src="/images/defaultprofile.png" alt="profie image about us page">
-                </div>
-                <div class="aboutUsInfo">
-                    <h4>Full Name</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis sapiente
-                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus itaque alias
-                        cumque sed quas, possimus cum.
-                    </p>
-                    <div class="aboutUsSocial">
-                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
-                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
-                    </div>
-
-                </div>
-            </div>
-            <div class="aboutUsCard">
-                <div class="aboutUsPic">
-                    <img src="/images/defaultprofile.png" alt="profie image about us page">
-                </div>
-                <div class="aboutUsInfo">
-                    <h4>Full Name</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint, rerum quis sapiente
-                        eligendi a aliquid voluptate consequuntur officia ipsum. Deleniti amet ducimus itaque alias
-                        cumque sed quas, possimus cum.
-                    </p>
-                    <div class="aboutUsSocial">
-                        <a href=""><i class="fab fa-github-square fa-2x"></i></a>
-                        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-<%- include('./partials/footer') %>
+                    <%- include('./partials/footer') %>
