home adjustment for signup page highlight, search being recieved on server

--- a/SOF/views/home.ejs
+++ b/SOF/views/home.ejs
@@ -24,15 +24,7 @@
                                 </ol>
                             </section>
                             <section class="blobMid2">
-                                <h3>Faça agora o seu</h3>
-                                <div class="mailMid">
-                                    <form method="POST" action="" class="formSignUp">
-                                        <input class="Busca-texto" type="text" placeholder="Digite seu e-mail">
-                                        <button><i role="button" action="post" id="envelope"
-                                                class="far fa-envelope fa-2x"></i></button>
-                                    </form>
-
-                                </div>
+                                <a href="/signUp">Faça agora o seu!</a>
                             </section>
                             <section class="blobMid3">
                                 <h3>Descubra</h3>
