--- a/SOF/public/stylesheets/style.css
+++ b/SOF/public/stylesheets/style.css
@@ -316,10 +316,15 @@ body .blobMid2{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   -webkit-box-shadow: 0px 0px 30px 0px #4e586aa6;
   -moz-box-shadow:    0px 0px 30px 0px #4e586aa6;
   box-shadow:         0px 0px 30px 0px #4e586aa6;
+}
+
+.blobMid2 a{
+  font-size: 20px;
 }
 
 
