--- a/SOF/views/signUp.ejs
+++ b/SOF/views/signUp.ejs
@@ -18,32 +18,50 @@
                         </div>
                         <% } %>
                             <label for="fullName">Nome Completo</label>
-                            <input name="fullName" type="text" placeholder="digite seu nome" value=<=% fields.name %>>
-                            <br>
-                            <label for=" username">Usuário</label>
-                            <input name="username" type="text" placeholder="@usuário">
-                            <br>
-                            <label for="email">Email</label>
-                            <input name="email" type="emai" placeholder="email@email.com">
-                            <label for="emailConfirmation">Confirmar email</label>
-                            <input name="emailConfirmation" type="email" placeholder="email@email.com">
-                            <br>
-                            <label for="phone">Celular</label>
-                            <input name="phone" type="text" placeholder="(XX) XXXXX-XXXX">
-                            <br>
-                            <label for="password">Senha</label>
-                            <input name="password" type="password" placeholder="digite sua senha">
-                            <label for="passwordConfirmation">Confirmar senha</label>
-                            <input name="passwordConfirmation" type="password" placeholder="confirme sua senha">
-                            <br>
-                            <label for="bioUpdate">Bio</label>
-                            <textarea class="bioUpdate" name="bioUpdate" id="bioUpdate" cols="30" rows="5"
-                                placeholder="Fale um pouco sobre você"></textarea>
-                            <label for="avatar">Avatar</label>
-                            <input type="file" name="avatar" accept="image/*">
-                            <br>
-                            <button type="submit">Cadastrar</button>
-                            <br>
+                            <input name="fullName" type="text" placeholder="digite seu nome" <% if(typeof(errors)
+                                !="undefined" ) { %> value="<%= fields.name %>">
+                                <% } %>
+                                    <br>
+                                    <label for=" username">Usuário</label>
+                                    <input name="username" type="text" placeholder="@usuário" <% if(typeof(errors)
+                                        !="undefined" ) { %> value="<%= fields.username %>">
+                                        <% } %>
+                                            <br>
+                                            <label for="email">Email</label>
+                                            <input name="email" type="emai" placeholder="email@email.com" <%
+                                                if(typeof(errors) !="undefined" ) { %> value="<%= fields.email %>">
+                                                <% } %>
+                                                    <label for="emailConfirmation">Confirmar email</label>
+                                                    <input name="emailConfirmation" type="email"
+                                                        placeholder="email@email.com" <% if(typeof(errors) !="undefined"
+                                                        ) { %> value="<%= fields.emailConfirmation %>">
+                                                        <% } %>
+                                                            <br>
+                                                            <label for="phone">Celular</label>
+                                                            <input name="phone" type="text"
+                                                                placeholder="(XX) XXXXX-XXXX" <% if(typeof(errors)
+                                                                !="undefined" ) { %> value="<%= fields.phone %>">
+                                                                <% } %>
+                                                                    <br>
+                                                                    <label for="password">Senha</label>
+                                                                    <input name="password" type="password"
+                                                                        placeholder="digite sua senha">
+                                                                    <label for="passwordConfirmation">Confirmar
+                                                                        senha</label>
+                                                                    <input name="passwordConfirmation" type="password"
+                                                                        placeholder="confirme sua senha">
+                                                                    <br>
+                                                                    <label for="bioUpdate">Bio</label>
+                                                                    <textarea placeholder="Fale um pouco sobre você"
+                                                                        name="bioUpdate" cols="30"
+                                                                        rows="5"><% if(typeof(errors)
+                                                                        !="undefined" ) { %><%= fields.bioUpdate%><% } %></textarea>
+
+                                                                    <label for="avatar">Avatar</label>
+                                                                    <input type="file" name="avatar" accept="image/*">
+                                                                    <br>
+                                                                    <button type="submit">Cadastrar</button>
+                                                                    <br>
                 </form>
             </div>
 
