--- a/SOF/public/stylesheets/style.css
+++ b/SOF/public/stylesheets/style.css
@@ -2298,12 +2298,12 @@ select:hover{
   flex-direction: row;
   justify-content:space-evenly;
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
 .containerAccMgmt .editBox{
   width: 300px;
-  height: 80%;
+  height: min-content;
   border: solid 2px #4e586a65;
   padding: 10px;
 }
